# Orchify

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
orchify/: __init__.py  cli.py  generator.py
tests/: test_cli.py
